projects page overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -2362,6 +2362,7 @@
   width: 100vw;
   min-height: 100vh;
   padding: 0rem 0rem 4rem 0rem;
+  overflow-x: hidden;
 }
 .projects-heading{
   display:flex;
